# rmatch

./: .dockerignore  .gcloudignore  .gitignore  CODE_OF_CONDUCT.md  DISPATCH_OPTIMIZATION_RESULTS.md  FASTPATH_PERFORMANCE_ANALYSIS.md  GC_EXPERIMENTS.md  GC_OPTIMIZATION_RESULTS.md  GITHUB_ACTIONS_SETUP.md  Makefile  PERFORMANCE_CHARTS.md  PERFORMANCE_TESTING.md  QUICKSTART_GC.md  README.md  TODO.md  TODO.txt  allofit.txt  benchmarks.ipynb  foo.sh  foo.sh~  index.html  measurements.sqlite  params.json  pom.xml  requirements.txt  rmatch-infra-bootstrap.tgz  summarize-large-corpus-trials.sql  test_profile_guided.sh  test_warmup_benchmark.sh
extended-benchmarking/regex_bench_framework/: .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  cleanup_and_resume.py  create_10k_metadata.py  create_1k_metadata.py  create_efficient_10k_patterns.py  create_pattern_metadata.py  create_safe_10k_patterns.py  create_stable_metadata.py  debug_hanging_job.py  debug_subprocess.py  debug_timeout.py  final_option_a_report.html  generate_performance_analysis.py  minimal_subprocess_test.py  pyproject.toml  requirements_backup.txt  run_10k_benchmarks.sh  standalone_report_test.py  test_end_to_end.py  test_file_based_solution.py  test_file_runner_direct.py  test_job_execution.py  test_job_runner.py  test_report.py  test_stable_10k_patterns.json  tmp.txt
extended-benchmarking/regex_bench_framework/debug_pattern_reuse_20251219_234537/: summary.json
extended-benchmarking/regex_bench_framework/docs/: FAIRNESS_AND_REPRODUCIBILITY.md  GCP_RUN_CONTROL.md  PHASED_BENCHMARKING_PLAN.md  PHASE_D_SMOKE_EXECUTION.md
extended-benchmarking/regex_bench_framework/gcp_runs/: 20260228_162402_52385d.json  20260228_164511_bca72a.json  20260228_164932_6d8771.json  20260228_165316_9b0e1e.json  20260228_183815_34c870.json  20260301_112323_417559.json  20260301_113023_ebbdcb.json  20260301_164010_3ae803.json  20260301_181108_69ea8d.json  (+9 more)
(+877 files in other folders)
